--- a/css/global/header.css
+++ b/css/global/header.css
@@ -25,7 +25,7 @@ margin: 0 auto;
   padding: 16px 0;
   font-size: 1.125rem;
   position: relative;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
 }
 
