--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -28,7 +28,7 @@
   margin-bottom: 32px;
   font-size: 4rem;
   line-height: 1.125;
-  font-family: 'Poppins';
+  font-family: 'Poppins',sans-serif;
   font-weight: 600;
 }
 .introducao p {
@@ -36,33 +36,8 @@
   font-size: 1.5rem;
   line-height: 1.5;
   color: #b2b2b2;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
-}
-
-.introducao a{
-  display: inline-block;
-  padding: 16px 32px;
-  border-radius: 4px;
-  background: linear-gradient(#FFBF00, #F2A60C);
-  color: #332200;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  line-height: 1.33;
-  font-family: 'Poppins';
-  font-weight: 600;
-}
-
-.introducao a:hover{
-  background: linear-gradient(#FFB60d, #e59317);
-}
-
-@media(max-width: 600px){
-  .introducao a{
-    padding: 12px 16px;
-    font-size: 1rem;
-  }
 }
 
 @media(max-width: 800px){
