--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg{
-  background-color: #000000;
+  background-color: var(--bg-1);
 }
 
 .header{
@@ -20,7 +20,6 @@ margin: 0 auto;
 }
 
 .header-menu a{
-  color: #ffffff;
   display: inline-block;
   padding: 16px 0;
   font-size: 1.125rem;
@@ -34,7 +33,7 @@ margin: 0 auto;
   display: block;
   height: 2px;
   width: 0;
-  background: #ffffff;
+  background: var(--bg-3);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -48,12 +47,12 @@ margin: 0 auto;
     gap: 20px;
   }
   .header-menu a{
-    background: #111111;
+    background: var(--bg-2);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover{
-    background: #2e2e2e;
+    background: var(--bg-4);
   }
   .header a::after{
     display: none;
