--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,10 +1,9 @@
-
 .botao{
   display: inline-block;
   padding: 16px 32px;
   border-radius: 4px;
   background: linear-gradient(#FFBF00, #F2A60C);
-  color: #332200;
+  color: var(--cor-p5);
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
   font-size: 1.125rem;
