--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -1,13 +1,76 @@
-.texto-grande{
+.font-1-xxl{
   font-size: 4rem;
   line-height: 1.125;
   font-family: 'Poppins',sans-serif;
   font-weight: 600;
 }
 
-.texto-medio{
+.font-1-xl{
+  font-size: 2rem;
+  line-height: 1.125;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+.font-1-l{
+  font-size: 1.5rem;
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+}
+.font-1-m{
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+}
+.font-1-m-b{
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+.font-1-s{
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+.font-1-xs{
+  font-size: 0.75rem;
+  line-height: 1.33;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+.font-2-l{
   font-size: 1.5rem;
   line-height: 1.5;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
+.font-2-l-b{
+  font-size: 1.5rem;
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.font-2-m{
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+.font-2-s{
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+.font-2-s{
+  font-size: 0.875rem;
+  line-height: 1.43;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
