--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -67,7 +67,7 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
-.font-2-s{
+.font-2-xs{
   font-size: 0.875rem;
   line-height: 1.43;
   font-family: 'Roboto', sans-serif;
