--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -7,7 +7,7 @@
 
 .font-1-xl{
   font-size: 2rem;
-  line-height: 1.125;
+  line-height: 1.25;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
@@ -33,13 +33,20 @@
   font-size: 1rem;
   line-height: 1.5;
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
 }
 .font-1-xs{
   font-size: 0.75rem;
   line-height: 1.33;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
+}
+
+.font-2-xl{
+  font-size: 2rem;
+  line-height: 1.25;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
 }
 
 .font-2-l{
@@ -53,6 +60,7 @@
   line-height: 1.5;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
+  letter-spacing: 0.015em;
   text-transform: uppercase;
 }
 .font-2-m{
@@ -74,3 +82,24 @@
   font-weight: 400;
 }
 
+/* Tipografia Responsiva */
+
+@media(max-width: 1200px){
+  .font-1-xxl{
+    font-size: 3rem;
+  }
+  .font-2-l,
+  .font-2-l-b {
+    font-size: 1.125rem;
+  }
+}
+
+@media(max-width: 800px){
+  .font-1-xxl{
+    font-size: 2.375rem;
+  }
+  .font-1-xl,
+  .font-2-xl {
+    font-size: 1.5rem;
+  }
+}
