--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,9 @@
+.container{
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto
+}
+
 .botao{
   display: inline-block;
   padding: 16px 32px;
