--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -6,7 +6,7 @@
 .introducao{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0 40px;
+  gap: 0px 40px;
 }
 
 .introducao-conteudo{
@@ -15,6 +15,7 @@
 }
 
 .introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 4px;
