--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 /*Home CSS*/
 @import './home/introducao.css';
+@import './home/tecnologia.css';
 
 /*Bicicletas CSS*/
 @import './bicicletas/bicicletas-lista.css';
