--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,7 +1,8 @@
 .container{
   max-width: 1200px;
-  padding: 0 20px;
-  margin: 0 auto
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 }
 
 .botao{
