maked depoiment part and fixed responsiveness

--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,8 +8,8 @@ flex-wrap: wrap;
 gap: 20px;
 justify-content: space-between;
 align-items: center;
-padding-top: 1.25rem;
-padding-bottom: 1.25rem;
+padding-top: 20px;
+padding-bottom: 20px;
 }
 
 .header-menu{
@@ -20,7 +20,7 @@ padding-bottom: 1.25rem;
 
 .header-menu a{
   display: inline-block;
-  padding: 16px 0;
+  padding: 16px 0px;
   position: relative;
   font-size: 1.125rem;
   font-family: 'Poppins', sans-serif;
