--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 /*Home CSS*/
 @import './home/introducao.css';
 @import './home/tecnologia.css';
+@import './home/parceiros.css';
+@import './home/depoimento.css';
 
 /*Bicicletas CSS*/
 @import './bicicletas/bicicletas-lista.css';
