--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -2,7 +2,8 @@
   max-width: 1200px;
   padding-left: 20px;
   padding-right: 20px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .botao{
