--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -18,10 +18,20 @@
   line-height: 1.35;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
+  max-width: max-content;
 }
 
 .botao:hover{
   background: linear-gradient(#FFB60d, #e59317);
+}
+
+.botao.secundario{
+  background: var(--cor-8);
+  color: var(--cor-2);
+}
+
+.botao.secundario:hover{
+  background: var(--cor-7);
 }
 
 @media(max-width: 600px){
