--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*Global CSS*/
 @import './global/global.css';
 @import './global/header.css';
+@import './global/footer.css';
 
 
 /*Utilidades CSS*/
