--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -59,3 +59,23 @@
 .link:hover{
   color: var(--cor-0);
 }
+
+.titulo-bg{
+  background: var(--bg-4);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.titulo p{
+  margin-bottom: 4px;
+}
+
+@media(max-width: 800px){
+  .titulo-bg{
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .titulo p{
+    font-size: 1rem;
+  }
+}
