--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 
 /*Bicicletas CSS*/
 @import './bicicletas/bicicletas-lista.css';
+@import './bicicletas/bicicletas.css';
 
 /* Seguros CSS */
 @import './seguros/seguros.css';
