--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,5 +1,5 @@
 .bicicletas-bg:nth-child(3){
-  background: var(--bg-4);
+  background: linear-gradient(to right, var(--cor-0) 30%, var(--bg-2) 0%);
 }
 
 .bicicletas{
@@ -31,6 +31,7 @@
 .bicicletas-conteudo{
   display: grid;
   grid-template-columns: 1fr auto;
+  align-content: start;
 }
 
 .bicicletas h2,
@@ -72,4 +73,30 @@
 .bicicletas-conteudo img{
   width: 24px;
   margin-right: 8px;
+}
+
+@media(max-width: 800px){
+  .bicicletas-bg:nth-child(3){
+    background: var(--bg-2);
+  }
+  .bicicletas{
+    grid-template-columns: 1fr;
+    gap: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
+@media(max-width: 600px){
+  .bicicletas-conteudo{
+    grid-template-columns: 1fr;
+  }
+  .bicicletas ul{
+    font-size: 1rem;
+    margin-bottom: 32px;
+    grid-template-columns: 1fr 1fr;
+  }
+  .bicicletas a{
+    place-self: start;
+  }
 }
