--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -34,6 +34,25 @@
   background: var(--cor-7);
 }
 
+.botao.seta{
+  display: flex;
+  align-items: center;
+}
+
+.botao.seta::after{
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url('../../img/icons/seta\ 2.svg');
+  transition: transform 2s;
+}
+
+.botao.seta:hover::after{
+  transform: translateX(4px);
+}
+
 @media(max-width: 600px){
   .botao{
     padding: 12px 16px;
@@ -61,7 +80,7 @@
 }
 
 .titulo-bg{
-  background: var(--bg-4);
+  background: var(--bg-2);
   padding-top: 60px;
   padding-bottom: 60px;
 }
