--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -1,5 +1,5 @@
 .seguros-bg{
-  background: var(--bg-4);
+  background: var(--bg-2);
 }
 
 .seguros{
@@ -9,6 +9,9 @@
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   align-items: center;
+}
+#seguros .seguros{
+  padding-top: 0;
 }
 
 .seguros h2{
@@ -20,6 +23,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .seguros-item h3{
