--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
 @import './bicicletas/bicicletas-lista.css';
 @import './bicicletas/bicicletas.css';
 
+/* Bicicleta CSS */
+@import './bicicleta/bicicleta.css';
+@import './bicicleta/seguro.css';
+
 /* Seguros CSS */
 @import './seguros/seguros.css';
 @import './seguros/vantagens.css';
