feito a parte de contato/contato.css

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import './utilidades/componentes.css';
 @import './utilidades/cores.css';
 @import './utilidades/tipografia.css';
+@import './utilidades/formulario.css';
 
 /*Home CSS*/
 @import './home/introducao.css';
@@ -27,6 +28,10 @@
 @import './seguros/seguros.css';
 @import './seguros/vantagens.css';
 @import './seguros/perguntas.css';
+
+/* Contato CSS */
+@import './contato/contato.css';
+@import './contato/lojas.css';
 
 /* Termos CSS */
 @import './termos/termos.css'
