--- a/css/style.css
+++ b/css/style.css
@@ -33,5 +33,8 @@
 @import './contato/contato.css';
 @import './contato/lojas.css';
 
+/* Orçamento CSS */
+@import './orcamento/orcamento.css';
+
 /* Termos CSS */
 @import './termos/termos.css'
