--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -15,12 +15,12 @@
 
 .contato-dados{
   border-radius: 5px 0 0 5px;
-  background: var(--bg-1);
+  background: var(--bg-1)url('../../img/bottom-left.svg') no-repeat bottom 20px left 20px;
 }
 
 .contato-formulario{
   border-radius: 0 5px 5px 0;
-  background: var(--bg-3);
+  background: var(--bg-3) url('../../img/bottom-right.svg') no-repeat bottom 20px right 20px;
 }
 
 .contato-dados h2{
@@ -77,6 +77,7 @@
 }
 .contato-dados{
   border-radius: 5px 5px 0 0;
+  background: var(--bg-1);
 }
 .contato-formulario{
   border-radius: 0 0 5px 5px;
