--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -15,6 +15,7 @@
 .depoimento-conteudo{
   padding: 40px 40px 80px 80px;
   align-self: end;
+  background: url('../../img/bottom-right.svg') no-repeat bottom 40px right 40px;
 }
 
 .depoimento-conteudo p{
@@ -53,5 +54,11 @@
   }
   .depoimento img{
     max-height: 200px;
+  }
+}
+
+@media(min-width: 1200px){
+  .depoimento img {
+    max-height: 520px;
   }
 }
