--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg{
-  background: var(--bg-1);
+  background: var(--bg-1) url('../../img/bottom-left.svg') no-repeat bottom 160px left 20px;
   box-shadow:  inset 0 -120px #ffffff;
 }
 
