--- a/css/orcamento/orcamento.css
+++ b/css/orcamento/orcamento.css
@@ -33,7 +33,7 @@
 
 .orcamento-produto{
   border-radius: 4px 0 0 4px;
-  background: var(--bg-1);
+  background: var(--bg-1) url('../../img/bottom-left.svg') no-repeat bottom 20px left 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-content: start;
@@ -121,7 +121,7 @@
 
 .orcamento-dados{
   border-radius: 0 4px 4px 0;
-  background: var(--bg-3);
+  background: var(--bg-3) url('../../img/bottom-right.svg') no-repeat bottom 20px right 20px;
 }
 
 .orcamento-conteudo{
@@ -175,6 +175,7 @@ display: grid;
   }
   .orcamento-produto{
     border-radius: 4px 4px 0 0;
+    background: var(--bg-1);
   }
   .orcamento-dados{
     border-radius: 0 0 4px 4px;
