adicionando o menu ativo com javascript

--- a/css/global/header.css
+++ b/css/global/header.css
@@ -37,7 +37,8 @@ padding-bottom: 20px;
   transition: 0.3s;
   position: absolute;
 }
-.header-menu a:hover::after{
+.header-menu a:hover::after,
+.header-menu a.ativo::after{
   width: 100%;
 }
 
